--- a/src/campaign.html
+++ b/src/campaign.html
@@ -6,10 +6,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+        <style>
+            .navbar-custom {
+                background-color: black;
+            }
+
+        </style>
         <title>Campaign Portal</title>
     </head>
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+    <body class="bg-dark container-fluid m-0">
+        <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
             <div class="container-fluid">
                 <a class="navbar-brand" href="http://localhost:3000">Online Election Portal</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -31,33 +38,37 @@
                 </div>
             </div>
         </nav>
-        <header style="text-align: center;">
+        <header class="mt-3" style="text-align: center;color: white;">
             <h1>Campaigning Page</h1>
         </header>
         <br /> <br />
         <div id="loader" style="display: none;">
             <p class="text-center">Loading...</p>
         </div>
-        <div id="content">
-            <div class="container row">
-                <div class="col-lg-2"></div>
-                <div class="col-lg-8">
-                    <form onSubmit="App.uploadCampaign(); return false; ">
-                        <legend><h2>POST New Campaign</h2></legend>
-                        <textarea id="description" rows="10" cols="50" required>Add your Campaigning Descripiton here</textarea>
-                        <button type="submit" className="btn btn-success btn-block btn-lg">POST</button>
+        <div class="text-center row">
+            <div class="col-lg-3"></div>
+            <div class="card col-lg-6">
+                <div class="card-body content container">
+                    <form onSubmit="App.uploadCampaign(); return false;" style="height: fit-content;">
+                        <legend>
+                            <h2>POST New Campaign</h2>
+                        </legend>
+                        <textarea id="description" rows="10" cols="40" required
+                            placeholder="Add your Campaigning Descripiton here"></textarea><br /><br />
+                        <button type="submit" class="btn btn-primary btn-block">POST</button>
                     </form>
-                </div>  
-            </div>
-            <hr>
-            <div id="display-campaign">
-                <ul id='campaign'>
-                    <li></li>
-                </ul>
+                </div>
+                <hr />
+                <div class="mt-3" id="display-campaign">
+                    <ul id='campaign'>
+                        <li></li>
+                    </ul>
 
+                </div>
             </div>
-            <div class="col-lg-2"></div>
+            <div class="col-lg-3"></div>
         </div>
+
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -70,4 +81,5 @@
         <script src="js/truffle-contract.js"></script>
         <script src="js/app.js"></script>
     </body>
+
 </html>
